--- a/00-B1-Autoclaims/01-Exercise1-Part1and2.html
+++ b/00-B1-Autoclaims/01-Exercise1-Part1and2.html
@@ -3,7 +3,7 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.7/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.11/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,48 +12,71 @@
 class: center, middle, inverse, title-slide
 
 # Statistics with R
-## R for Actuarial Students
+## Introduction to R for Actuarial Students
+
+---
+
+
+* Introduction to R for Actuarial Students
+
+* CS1B Curriculum
+
+* Introduction to R programming
+* Fundamentals of Statistical Analysis
+
+* Question 1 - Data Analysis
+* Exam on basis of ***Base R*** ( I will mention ***tidyverse***)
 
 ---
 
 
 
 
+&lt;style type="text/css"&gt;
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+&lt;/style&gt;
 
 ### AutoClaims
 
 
 ```r
-library(readr)
-AutoClaims &lt;- read_csv("data/AutoClaims.csv")
+AutoClaims &lt;- read.csv("data/AutoClaims.csv")
+```
+
+
+
+```r
+head(AutoClaims)
 ```
 
 ```
-## 
-## -- Column specification --------------------------------------------------------
-## cols(
-##   STATE = col_character(),
-##   CLASS = col_character(),
-##   GENDER = col_character(),
-##   AGE = col_double(),
-##   PAID = col_double()
-## )
+##      STATE CLASS GENDER AGE      PAID
+## 1 STATE 01   C6       M  43  2364.696
+## 2 STATE 01   F6       M  43 18787.967
+## 3 STATE 01   F6       M  43 27115.745
+## 4 STATE 02   C1       M  43 15288.492
+## 5 STATE 02   C11      M  43  2265.707
+## 6 STATE 02   C11      M  43  6344.641
 ```
 
 ---
 
-Exercise 1
-==============================================
+### Exercise 1
+
 Prepare a table with mean, standard deviation and coefficient of variance (CV) of the claims paid
 
-for each STATE and identify the one with the least and the highest CV
-for each CLASS and sort the table in the ascending order of the CV
+* for each STATE and identify the one with the least and the highest CV
+* for each CLASS and sort the table in the ascending order of the CV
 
 Hint: Coefficient of Variance (CV) can be computed as the ratio of standard deviation to the mean.
 
 ---
 
-Implementation using Base R:
+### Implementation using Base R:
 
 
 ```r
@@ -61,33 +84,49 @@ state_mean&lt;-aggregate(PAID~STATE,data = AutoClaims,FUN = mean)
 names(state_mean)&lt;-c("State","Mean")
 ```
 
+
+
+```r
+head(state_mean)
+```
+
+```
+##      State      Mean
+## 1 STATE 01 10235.800
+## 2 STATE 02  7055.078
+## 3 STATE 03  8714.932
+## 4 STATE 04  8152.759
+## 5 STATE 06  8786.739
+## 6 STATE 07  4960.479
+```
+
 ---
+
+### Implementation using Base R:
 
 
 ```r
 state_sd&lt;-aggregate(PAID~STATE,data = AutoClaims,FUN = sd)
+
 names(state_sd)&lt;-c("State","SD")
 
-state_sd
+head(state_sd)
 ```
 
 ```
-##       State        SD
-## 1  STATE 01 10932.877
-## 2  STATE 02  6327.473
-## 3  STATE 03  6494.346
-## 4  STATE 04  6985.210
-## 5  STATE 06 10749.517
-## 6  STATE 07  3065.092
-## 7  STATE 10 14599.291
-## 8  STATE 12  8634.955
-## 9  STATE 14  8406.388
-## 10 STATE 15  3364.269
-## 11 STATE 17  7831.913
+##      State        SD
+## 1 STATE 01 10932.877
+## 2 STATE 02  6327.473
+## 3 STATE 03  6494.346
+## 4 STATE 04  6985.210
+## 5 STATE 06 10749.517
+## 6 STATE 07  3065.092
 ```
 
 
 ---
+
+### State Summary
 
 
 ```r
@@ -118,12 +157,10 @@ state_summary
 state_summary$CV &lt;- state_summary$SD / state_summary$Mean
 ```
 
----
+Mean, Standard Deviation and Coefficient of Variance for each state
 
 
 ```r
-#Mean, Standard Deviation and Coefficient of Variance for each state
-
 state_summary
 ```
 
@@ -144,6 +181,7 @@ state_summary
 
 ---
 
+### Coefficients of Variance
 
 The State with minimum coefficient of variance is
 
@@ -167,61 +205,28 @@ state_summary$State[state_summary$CV==max(state_summary$CV)]
 ## [1] "STATE 12"
 ```
 
-The State with minimum coefficient of variance is
-
-
-```r
-state_summary$State[state_summary$CV==min(state_summary$CV)]
-```
-
-```
-## [1] "STATE 07"
-```
 
 
 ---
 
-The State with maximum coefficient of variance is
 
-
-```r
-state_summary$State[state_summary$CV==max(state_summary$CV)]
-```
-
-```
-## [1] "STATE 12"
-```
 
 #### State Summarys (Tidyverse)
 
 
-```r
+
+&lt;pre&gt;&lt;code&gt;
 library(dplyr)
-```
+library(magrittr)
+&lt;/code&gt;&lt;/pre&gt;
 
-```
-## 
-## Attaching package: 'dplyr'
-```
 
-```
-## The following objects are masked from 'package:stats':
-## 
-##     filter, lag
-```
-
-```
-## The following objects are masked from 'package:base':
-## 
-##     intersect, setdiff, setequal, union
-```
+### using ***group_by*** and ***summarize***
 
 ```r
-library(magrittr)
-
 state_summary_tidy &lt;- AutoClaims %&gt;% group_by(STATE) %&gt;%
    summarize(Mean = mean(PAID),
-   SD   = sd(PAID))
+             SD = sd(PAID))
 ```
 
 ---
@@ -243,26 +248,62 @@ head(state_summary_tidy)
 ## 6 STATE 07  4960.  3065.
 ```
 
+---
+
+### using ***mutate***
 
 
 ```r
 state_summary_tidy &lt;- AutoClaims %&gt;% group_by(STATE) %&gt;%
-   summarize(Mean = mean(PAID),
-   SD   = sd(PAID)) %&gt;%
-   mutate(CV = Mean/SD) %&gt;%
+   summarize(
+      Mean = mean(PAID),
+      SD = sd(PAID)) %&gt;%
+   mutate(CV = SD/Mean) %&gt;%
    arrange(CV)
+```
+
+
+---
+
+
+```r
+head(state_summary_tidy)
+```
+
+```
+## # A tibble: 6 x 4
+##   STATE      Mean    SD    CV
+##   &lt;chr&gt;     &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
+## 1 STATE 07  4960. 3065. 0.618
+## 2 STATE 03  8715. 6494. 0.745
+## 3 STATE 14 10399. 8406. 0.808
+## 4 STATE 04  8153. 6985. 0.857
+## 5 STATE 02  7055. 6327. 0.897
+## 6 STATE 17  7886. 7832. 0.993
 ```
 
 ---
 
-### Claims (Base R)
+### Class (Base R)
+
+
+Same as before, but just using Class rather than States
 
 
 ```r
 Class_mean&lt;-aggregate(PAID~CLASS,data = AutoClaims,FUN = mean)
+
 names(Class_mean)&lt;-c("Class","Mean")
+
 Class_sd&lt;-aggregate(PAID~CLASS,data = AutoClaims,FUN = sd)
+
 names(Class_sd)&lt;-c("Class","SD")
+```
+
+---
+
+
+```r
 Class_summary&lt;-merge(Class_mean,Class_sd)
 Class_summary$CV&lt;-Class_summary$SD/Class_summary$Mean
 #Mean, Standard Deviation and Coefficient of variance for each rating class
@@ -271,10 +312,10 @@ Class_summary
 
 ```
 ##   Class      Mean       SD        CV
-## 1    C1 17464.484 9613.323 0.5504499
+## 1   C1  17464.484 9613.323 0.5504499
 ## 2   C11  5887.049 3434.371 0.5833774
-## 3    C6  2367.215 1533.807 0.6479373
-## 4    F6 17434.533 9188.423 0.5270243
+## 3   C6   2367.215 1533.807 0.6479373
+## 4   F6  17434.533 9188.423 0.5270243
 ```
 
 ---
@@ -287,20 +328,24 @@ Class_summary[order(Class_summary$CV),]
 
 ```
 ##   Class      Mean       SD        CV
-## 4    F6 17434.533 9188.423 0.5270243
-## 1    C1 17464.484 9613.323 0.5504499
+## 4   F6  17434.533 9188.423 0.5270243
+## 1   C1  17464.484 9613.323 0.5504499
 ## 2   C11  5887.049 3434.371 0.5833774
-## 3    C6  2367.215 1533.807 0.6479373
+## 3   C6   2367.215 1533.807 0.6479373
 ```
+
+
+---
 
 
 ```r
 Class_summary_tidy &lt;- AutoClaims %&gt;% group_by(CLASS) %&gt;%
    summarize(Mean = mean(PAID),
-   SD   = sd(PAID)) %&gt;%
-   mutate(CV = Mean/SD) %&gt;%
+             SD = sd(PAID)) %&gt;%
+   mutate(CV = SD/Mean) %&gt;%
    arrange(CV)
 ```
+---
 
 
 ```r
@@ -311,74 +356,82 @@ Class_summary_tidy
 ## # A tibble: 4 x 4
 ##   CLASS   Mean    SD    CV
 ##   &lt;chr&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;
-## 1 C6     2367. 1534.  1.54
-## 2 C11    5887. 3434.  1.71
-## 3 C1    17464. 9613.  1.82
-## 4 F6    17435. 9188.  1.90
+## 1 "F6 " 17435. 9188. 0.527
+## 2 "C1 " 17464. 9613. 0.550
+## 3 "C11"  5887. 3434. 0.583
+## 4 "C6 "  2367. 1534. 0.648
 ```
+
+
 
 ---
 
+### Exercise 2
 
-```r
-Class_mean&lt;-aggregate(PAID~CLASS,data = AutoClaims,FUN = mean)
-names(Class_mean)&lt;-c("Class","Mean")
-Class_sd&lt;-aggregate(PAID~CLASS,data = AutoClaims,FUN = sd)
-names(Class_sd)&lt;-c("Class","SD")
-Class_summary&lt;-merge(Class_mean,Class_sd)
-Class_summary$CV&lt;-Class_summary$SD/Class_summary$Mean
-#Mean, Standard Deviation and Coefficient of variance for each rating class
-Class_summary
-```
-
-```
-##   Class      Mean       SD        CV
-## 1    C1 17464.484 9613.323 0.5504499
-## 2   C11  5887.049 3434.371 0.5833774
-## 3    C6  2367.215 1533.807 0.6479373
-## 4    F6 17434.533 9188.423 0.5270243
-```
-
-```r
-Class_summary[order(Class_summary$CV),]
-```
-
-```
-##   Class      Mean       SD        CV
-## 4    F6 17434.533 9188.423 0.5270243
-## 1    C1 17464.484 9613.323 0.5504499
-## 2   C11  5887.049 3434.371 0.5833774
-## 3    C6  2367.215 1533.807 0.6479373
-```
-
----
-
-Exercise 2
-=====================
 By using a box plot, identify the STATE(s) and CLASS(es) which have no outlier values in terms of the claims paid.
 
+&lt;pre&gt;&lt;code&gt;
 options(repr.plot.width=12, repr.plot.height=8)
 
 boxplot(PAID~STATE,data = AutoClaims)
+&lt;/code&gt;&lt;/pre&gt;
+
+---
+
+![](01-Exercise1-Part1and2_files/figure-html/unnamed-chunk-22-1.png)&lt;!-- --&gt;
 
 
 States with no outliers are State 14.
+---
 
+
+```r
 boxplot(PAID~CLASS,data = AutoClaims)
-​
+```
+
+![](01-Exercise1-Part1and2_files/figure-html/unnamed-chunk-23-1.png)&lt;!-- --&gt;
 
 Class with no outlier is C11.
 
+--- 
+
+### Exercise 2 (ggplot2)
+
+&lt;pre&gt;&lt;code&gt;
 
 library(ggplot2)
-​
+
 p &lt;- ggplot(data=AutoClaims,aes(x=STATE,y=PAID)) + geom_boxplot()
-​
+
 p
+&lt;/code&gt;&lt;/pre&gt;
+
+---
+
+
+```
+## Warning: package 'ggplot2' was built under R version 4.0.5
+```
+
+![](01-Exercise1-Part1and2_files/figure-html/unnamed-chunk-24-1.png)&lt;!-- --&gt;
+
+---
+
+### Exercise 2 (ggplot2)
+
+&lt;pre&gt;&lt;code&gt;
 
 p &lt;- ggplot(data=AutoClaims,aes(x=CLASS,y=PAID)) + geom_boxplot() 
-​
+
 p + theme_bw()
+
+&lt;/code&gt;&lt;/pre&gt;
+
+---
+
+![](01-Exercise1-Part1and2_files/figure-html/unnamed-chunk-25-1.png)&lt;!-- --&gt;
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
