--- a/00-I1-CS1B-FIA-September-2021/Question_2.html
+++ b/00-I1-CS1B-FIA-September-2021/Question_2.html
@@ -23,9 +23,10 @@ class: center, middle, inverse, title-slide
 
 * Introduction to R programming
 * Fundamentals of Statistical Analysis
+* Probability Distributions
 
-* Question 1 - Data Analysis
-* Exam on basis of ***Base R*** ( I will mention ***tidyverse***)
+* Question 2 - Random Number Generation
+* Exam on basis of ***Base R*** 
 
 ---
 
@@ -40,156 +41,185 @@ pre {
 }
 &lt;/style&gt;
 
-For a sample data X =\{ 0.5820, 0.04981, 0.1552, 0.1555, 
-0.9036, 0.8501, 0.9288, 0.4408, 
-0.9688, 0.6300\}
+### Reproducible Simulations
 
 
-### Exercises
-
-1. Find the mean value of X 
-
-2. Calculate the standard deviation of X 
-
-3. Find the median of X 
+When you execute any R code in this question, make sure you run the entire R script 
+including the line ***set.seed(1234)*** at the start.
 
 ---
 
+Use the command ***set.seed(1234)*** to initialise the random number generator. 
 
 
+#### Exercises
+1.  Generate a sample of size `\(n = 180\)` from an Exponential distribution 
+with parameter `\(\lambda  = 5\)`. 
 
-```r
-X &lt;- c(0.5820, 0.04981, 0.1552, 0.1555, 0.9036, 0.8501, 0.9288, 0.4408, 0.9688, 0.6300)
-```
+2. Calculate the sample median of the sample in part 1.
 
----
+3. Calculate the median of the Exponential distribution with `\(\lambda  = 5\)`. 
 
-#### Summary Statistics
+4. Comment on your results in parts 2 and 3. 
 
+5.  The maximum likelihood estimator for `\(\lambda\)` is given by `\(\lambda = 1/X\)` where `\(X\)` is the sample 
+mean. Estimate the parameter `\(\lambda\)`  using the maximum likelihood estimator and 
+the sample in part 1
 
-```r
-mean(X)
-```
+6. Generate another sample of size n = 180 from an Exponential 
+distribution with parameter `\(\lambda  = 5\)` and estimate the parameter `\(\lambda\)`  using 
+the maximum likelihood estimator and the new sample. 
 
-```
-## [1] 0.566461
-```
-
-
-```r
-sd(X)
-```
-
-```
-## [1] 0.3515525
-```
-
-
-```r
-median(X)
-```
-
-```
-## [1] 0.606
-```
-
----
-
-#### Sort
-
-
-```r
-sort(X)
-```
-
-```
-##  [1] 0.04981 0.15520 0.15550 0.44080 0.58200 0.63000 0.85010 0.90360 0.92880
-## [10] 0.96880
-```
-
-#### Reverse the order
-
-
-```r
-rev(X)
-```
-
-```
-##  [1] 0.63000 0.96880 0.44080 0.92880 0.85010 0.90360 0.15550 0.15520 0.04981
-## [10] 0.58200
-```
-
+7. Comment on the estimated values in parts 5 and 6
 
 
 ---
 
+### Set Up 
 
 
 ```r
-X
-```
+set.seed(1234) 
 
-```
-##  [1] 0.58200 0.04981 0.15520 0.15550 0.90360 0.85010 0.92880 0.44080 0.96880
-## [10] 0.63000
-```
+lambda &lt;- 5
 
-#### which,max and which.min()
-
-
-```r
-which.min(X)
-```
-
-```
-## [1] 2
-```
-
-
-```r
-which.max(X)
-```
-
-```
-## [1] 9
+samplesize &lt;- 180
 ```
 
 ---
 
-#### Order
+#### Exercise 1
+
+Generate a sample of size `\(n = 180\)` from an Exponential distribution 
+with parameter `\(\lambda  = 5\)`. 
+  
+
+```r
+x = rexp(samplesize,lambda) 
+```
 
 
 ```r
-order(X)
+head(x)
 ```
 
 ```
-##  [1]  2  3  4  8  1 10  6  5  7  9
+## [1] 0.500351721 0.049351777 0.001316391 0.348549218 0.077436517 0.017989934
 ```
 
 
-#### Rank and Order
+#### Alternative Approach
+
+* Using Inverse Transform Sampling
 
 
 ```r
-cbind(X, rank(X) )
-```
-
-```
-##             X   
-##  [1,] 0.58200  5
-##  [2,] 0.04981  1
-##  [3,] 0.15520  2
-##  [4,] 0.15550  3
-##  [5,] 0.90360  8
-##  [6,] 0.85010  7
-##  [7,] 0.92880  9
-##  [8,] 0.44080  4
-##  [9,] 0.96880 10
-## [10,] 0.63000  6
+x=-(1/5)*log(runif(samplesize))
 ```
 
 ---
+
+#### Exercise 2
+
+Calculate the sample median of the sample in part 1.
+
+
+```r
+m = median(x) 
+m 
+```
+
+```
+## [1] 0.1306305
+```
+
+---
+
+#### Exercise 3
+
+Calculate the median of the Exponential distribution with `\(\lambda  = 5\)`. 
+
+
+```r
+mq = qexp(0.5,lambda)
+mq 
+```
+
+```
+## [1] 0.1386294
+```
+
+Remark: This is the analytical result, i.e. the population median
+
+---
+
+#### Exercise 4
+
+Comment on your results in parts 2 and 3.
+
+* The sample median in part 2 is an estimator for the true median in part 3 based
+on the sample in part 1 
+
+* The results in parts 2 and 3 are not equal but similar 
+
+---
+
+#### Exercise 5
+The maximum likelihood estimator for `\(\lambda\)` is given by `\(\lambda = 1/X\)` where `\(X\)` is the sample 
+mean. Estimate the parameter `\(\lambda\)`  using the maximum likelihood estimator and 
+the sample in part 1
+
+
+
+* For the parameter of an exponential distribution the MLE is the inverse of the
+sample mean
+
+
+```r
+l = 1/mean(x) 
+l 
+```
+
+```
+## [1] 5.259869
+```
+
+Compare to `\(\lambda\)`
+
+
+```r
+lambda
+```
+
+```
+## [1] 5
+```
+---
+
+#### Exercise 6
+
+Generate another sample of size n = 180 from an Exponential distribution with parameter `\(\lambda  = 5\)` and estimate the parameter `\(\lambda\)` using the maximum likelihood estimator and the new sample. 
+
+
+```r
+x2 &lt;- rexp(samplesize,lambda)
+
+1/mean(x2) 
+```
+
+```
+## [1] 4.894128
+```
+
+---
+
+#### Exercise 7
+
+Comment on the estimated values in parts 5 and 6
+
+* The estimated values are both close to the true value ($\lambda = 5$) but not identical. 
+* The actual value of the estimator is a random variable and the estimated value depends on the actual sample
+
 
 ---
     </textarea>
