--- a/00-J1-CS1B-ASI-September-2021/Question_2.html
+++ b/00-J1-CS1B-ASI-September-2021/Question_2.html
@@ -23,9 +23,10 @@ class: center, middle, inverse, title-slide
 
 * Introduction to R programming
 * Fundamentals of Statistical Analysis
+* Probability Distributions
 
-* Question 1 - Data Analysis
-* Exam on basis of ***Base R*** ( I will mention ***tidyverse***)
+* Question 2 - Correlation Analysis
+* Exam on basis of ***Base R***
 
 ---
 
@@ -40,158 +41,164 @@ pre {
 }
 &lt;/style&gt;
 
-For a sample data X =\{ 0.5820, 0.04981, 0.1552, 0.1555, 
-0.9036, 0.8501, 0.9288, 0.4408, 
-0.9688, 0.6300\}
 
+A student is performing a study to understand the correlation of temperature among 
+different days of the week. 
+Temperature on weekdays is recorded for 15 weeks in the file ***Temperature_data.csv***.
 
-### Exercises
+Generate the following correlation matrices
 
-1. Find the mean value of X 
+1. Pearson’s correlation matrix 
 
-2. Calculate the standard deviation of X 
+2. Kendall’s rank correlation matrix
 
-3. Find the median of X 
+3. Spearman’s rank correlation matrix
 
----
-
-
-
-
-```r
-X &lt;- c(0.5820, 0.04981, 0.1552, 0.1555, 0.9036, 0.8501, 0.9288, 0.4408, 0.9688, 0.6300)
-```
-
----
-
-#### Summary Statistics
-
-
-```r
-mean(X)
-```
-
-```
-## [1] 0.566461
-```
-
-
-```r
-sd(X)
-```
-
-```
-## [1] 0.3515525
-```
-
-
-```r
-median(X)
-```
-
-```
-## [1] 0.606
-```
-
----
-
-#### Sort
-
-
-```r
-sort(X)
-```
-
-```
-##  [1] 0.04981 0.15520 0.15550 0.44080 0.58200 0.63000 0.85010 0.90360 0.92880
-## [10] 0.96880
-```
-
-#### Reverse the order
-
-
-```r
-rev(X)
-```
-
-```
-##  [1] 0.63000 0.96880 0.44080 0.92880 0.85010 0.90360 0.15550 0.15520 0.04981
-## [10] 0.58200
-```
-
+Comment on the outcomes of the results in parts 1 to 3.
 
 
 ---
 
+#### Exercise 1: Pearson's Correlation
 
 
 ```r
-X
+Data = read.csv("Temperature_data.csv")
+cor (Data, method = "pearson")
 ```
 
 ```
-##  [1] 0.58200 0.04981 0.15520 0.15550 0.90360 0.85010 0.92880 0.44080 0.96880
-## [10] 0.63000
-```
-
-#### which,max and which.min()
-
-
-```r
-which.min(X)
-```
-
-```
-## [1] 2
-```
-
-
-```r
-which.max(X)
-```
-
-```
-## [1] 9
+##              Monday   Tuesday Wednesday  Thursday    Friday
+## Monday    1.0000000 0.9566180 0.5392556 0.8236445 0.9271275
+## Tuesday   0.9566180 1.0000000 0.7612155 0.9483756 0.9775503
+## Wednesday 0.5392556 0.7612155 1.0000000 0.9079766 0.7619665
+## Thursday  0.8236445 0.9483756 0.9079766 1.0000000 0.9632126
+## Friday    0.9271275 0.9775503 0.7619665 0.9632126 1.0000000
 ```
 
 ---
 
-#### Order
+#### Exercise 1: Kendall's Tau
 
 
 ```r
-order(X)
+cor (Data, method = "kendall")
 ```
 
 ```
-##  [1]  2  3  4  8  1 10  6  5  7  9
-```
-
-
-#### Rank and Order
-
-
-```r
-cbind(X, rank(X) )
-```
-
-```
-##             X   
-##  [1,] 0.58200  5
-##  [2,] 0.04981  1
-##  [3,] 0.15520  2
-##  [4,] 0.15550  3
-##  [5,] 0.90360  8
-##  [6,] 0.85010  7
-##  [7,] 0.92880  9
-##  [8,] 0.44080  4
-##  [9,] 0.96880 10
-## [10,] 0.63000  6
+##              Monday   Tuesday Wednesday  Thursday    Friday
+## Monday    1.0000000 0.6952381 0.2952381 0.4666667 0.6761905
+## Tuesday   0.6952381 1.0000000 0.6000000 0.7714286 0.8285714
+## Wednesday 0.2952381 0.6000000 1.0000000 0.7904762 0.5809524
+## Thursday  0.4666667 0.7714286 0.7904762 1.0000000 0.7904762
+## Friday    0.6761905 0.8285714 0.5809524 0.7904762 1.0000000
 ```
 
 ---
 
+#### Exercise 1
+
+
+```r
+cor (Data, method = "spearman")
+```
+
+```
+##              Monday   Tuesday Wednesday  Thursday    Friday
+## Monday    1.0000000 0.8642857 0.4035714 0.6250000 0.8250000
+## Tuesday   0.8642857 1.0000000 0.7678571 0.9035714 0.9535714
+## Wednesday 0.4035714 0.7678571 1.0000000 0.9392857 0.7821429
+## Thursday  0.6250000 0.9035714 0.9392857 1.0000000 0.8964286
+## Friday    0.8250000 0.9535714 0.7821429 0.8964286 1.0000000
+```
+
 ---
+
+#### Exercise 2
+
+* The outcome of Pearson method is based on the values of the data whereas Kendall and 
+Spearman correlation matrix is based on the rank of the values in the dataset.
+
+* Diagonal in each matrix represents the correlation of temperature with respect to the individual 
+days, for example Monday with Monday.
+
+* Pearson shows strong positive correlation between temperatures on Monday, Tuesday, 
+Thursday and Friday.
+
+* Kendall and Spearman shows lesser positive correlation as compared to the Pearson’s result 
+
+---
+
+&lt;pre&gt;&lt;code&gt;
+library(corrplot)
+
+M = cor(Data)
+corrplot(M) 
+&lt;/code&gt;&lt;/pre&gt;
+
+---
+
+
+```
+## corrplot 0.92 loaded
+```
+
+![](Question_2_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
+
+---
+
+&lt;pre&gt;&lt;code&gt;
+library(corrplot)
+
+M = cor(Data)
+corrplot(M, method = 'number') 
+&lt;/code&gt;&lt;/pre&gt;
+
+---
+
+
+![](Question_2_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+
+
+---
+
+
+```r
+library(faraway)
+```
+
+```
+## Warning: package 'faraway' was built under R version 4.0.5
+```
+
+```r
+data(punting)
+
+Data = punting 
+```
+
+
+---
+
+
+![](Question_2_files/figure-html/unnamed-chunk-8-1.png)&lt;!-- --&gt;
+---
+
+
+![](Question_2_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
+
+
+---
+
+### mtcars
+
+
+![](Question_2_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
+---
+
+
+![](Question_2_files/figure-html/unnamed-chunk-11-1.png)&lt;!-- --&gt;
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
